# lvgl-demo-esp32s3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  lcd_display.c  lcd_display.h  main.c  touch_i2c.c  touch_i2c.h
main/examples/: examples.c  examples.h  examples_gen.c  examples_gen.h  file_list_gen.cmake  globals.xml  project.xml
main/examples/components/: deck_btn.xml  deck_btn_gen.c  deck_btn_gen.h
main/examples/image_converted/: game.c  image_converted.h  media.c  power.c  setting.c  settings.c  social.c  work.c
main/examples/screens/: stream_deck_main.xml  stream_deck_main_gen.c  stream_deck_main_gen.h
scripts/: create-resource.sh  create-spiffs-image.sh  flash-partition.sh  font_list.csv  fonts-convert.sh  image-convert.sh
